--- a/styles/namidia.module.css
+++ b/styles/namidia.module.css
@@ -1,10 +1,12 @@
-.section{
-    padding: 2rem 1rem;
-    max-width: 900px;
-    margin: 0 auto;
-}
-.heading {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    text-align: center;
+
+.newsContainer {
+  display: flex;
+  /* deixa os cards em linha */
+  flex-wrap: wrap;
+  /* permite que quebrem a linha se não couberem */
+  gap: 2rem;
+  /* espaço entre os cards */
+  justify-content: center;
+  /* centraliza os cards na página */
+  padding: 10rem 0;
 }
