--- a/styles/navbarlogout.module.css
+++ b/styles/navbarlogout.module.css
@@ -89,9 +89,17 @@
         display: none;
     }
 
+
     .titulomenu {
         font-size: 1.6rem;
         margin: 1rem;
+        align-items: flex-start !important;
+    }
+
+    .meuoffcanvas {
+        display: flex !important;
+        flex-direction: row !important;
+        text-decoration: none !important;
     }
 
 
@@ -108,7 +116,9 @@
         gap: 2rem;
         font-size: 1.6rem;
         color: #333;
+        text-decoration: none !important;
     }
+
 
     .navhamburguer {
         display: flex;
