--- a/app/globals.css
+++ b/app/globals.css
@@ -8,12 +8,19 @@
   background-color: rgba(252, 236, 213, 0.774);
 }
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
   /* 1rem = 10px */
+  padding: 2rem 10rem;
 }
 
 /* PÁGINAS */
+
 
 
 
