--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,12 @@
   box-sizing: border-box;
 }
 
+.body {
+  background-color: #fff;
+  padding: 2rem 10rem;
+  height: 150vh;
+}
+
 html {
   font-size: 62.5%;
   /* 1rem = 10px */
