--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -16,12 +16,11 @@
     margin: 5rem;
 }
 
-.doarimg {
-    width: 100%;
-    height: 40rem;
-    border-radius: 100%;
-    border: dotted 0.2rem #9D43C2;
-    transform: rotateX(180deg);
-    padding: 2rem;
-    
+
+@media (max-width: 768px) {
+    .doar {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin: 2rem;
+}
 }
