--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -12,15 +12,15 @@
 /* COMO DOAR */
 .doar {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     margin: 5rem;
 }
 
 
 @media (max-width: 768px) {
     .doar {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin: 2rem;
-}
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 2rem;
+    }
 }
