--- a/styles/copyright.module.css
+++ b/styles/copyright.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(to right, #17991b8c, #5f81b773, #d6545285, #9e43c27c, #d7c01683);
+    background: whitesmoke;
     border-top: solid 0.1rem #b5b5b5;
     padding: 1rem;
     color: #8c8c8c;
