--- a/styles/titulo.module.css
+++ b/styles/titulo.module.css
@@ -15,9 +15,9 @@
     top: 40%;
     left: 48%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: #333;
     font-size: 3rem;
-    text-shadow: 2px 2px 1px #555;
+    /* text-shadow: 2px 2px 1px whitesmoke; */
 }
 
 .escritap {
@@ -25,6 +25,6 @@
     top: 55%;
     left: 48%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: #333;
     font-size: 2rem;
 }
