--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,6 @@
   box-sizing: border-box;
 }
 
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
-
 .body {
   background-color: #fff;
   padding: 2rem 10rem;
@@ -23,6 +18,10 @@ html {
   font-size: 62.5%;
   /* 1rem = 10px */
   padding: 2rem 10rem;
+}
+
+section {
+  margin: 1rem;
 }
 
 /* PÁGINAS */
