--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -82,12 +82,6 @@
         display: none;
     }
 
-    .titulomenu {
-        font-size: 1.6rem;
-        margin: 1rem;
-        align-items: flex-start !important;
-    }
-
     .meuoffcanvas {
         display: flex !important;
         flex-direction: row !important;
@@ -103,13 +97,12 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
         font-size: 1.6rem;
         color: #333;
-        margin-left: 5rem;
     }
 
-    .item1 .dropdown-menu {
+    /* .item1 .dropdown-menu {
         display: block !important;
         position: relative !important;
         background-color: transparent !important;
@@ -121,7 +114,7 @@
         font-size: 1.6rem !important;
         padding: 1rem 0 !important;
         color: #333 !important;
-    }
+    } */
 
     .navhamburguer {
         display: flex;
