--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -102,7 +102,7 @@
         color: #333;
     }
 
-    /* .item1 .dropdown-menu {
+    .item1 .dropdown-menu {
         display: block !important;
         position: relative !important;
         background-color: transparent !important;
@@ -114,7 +114,7 @@
         font-size: 1.6rem !important;
         padding: 1rem 0 !important;
         color: #333 !important;
-    } */
+    }
 
     .navhamburguer {
         display: flex;
