--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,6 @@ section {
 /* PÁGINAS */
 
 
-
-
 /* COMPONENTES */
 
 
@@ -40,11 +38,11 @@ section {
   }
 
   /* NAVBAR */
-  /* a {
+  a {
     -webkit-tap-highlight-color: transparent;
     text-decoration: none;
     color: inherit;
-  } */
+  }
 
 
 }
