--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -89,17 +89,19 @@
 
     .navlateral {
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
-    }
-
-    .navitemslateral {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        gap: 1rem;
+        flex-direction: row;
+        gap: 2rem;
         font-size: 1.6rem;
         color: #333;
+    }
+
+    .items {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 
     .navhamburguer {
