--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -6,43 +6,16 @@
     background: whitesmoke;
     height: 15vh;
     box-shadow: 0 0 0.2rem 0.4rem rgba(0, 0, 0, 0.08);
-    padding: 2rem;
     color: #333;
 }
 
 /* // LOGO // */
-.logo-redes {
+.logoredes {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
-}
-
-
-/* // SEJA PARCEIRO // */
-
-.sejaparceiro {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-.mensagemparceiro {
-    font-size: 1.4rem;
-}
-
-.newscardbutton {
-    padding: 8px 12px;
-    border: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: background-color 0.2s;
 }
 
 /* // REDES SOCIAIS // */
@@ -52,9 +25,8 @@
     justify-content: center;
     flex-direction: column;
     font-size: 1.5.0rem;
-    flex-grow: 3;
+    flex-grow: 1;
 }
-
 
 .icons {
     display: flex;
@@ -65,13 +37,14 @@
 
 @media (max-width: 768px) {
     .footer {
-        height: 25vh;
+        height: 30vh;
         flex-direction: column;
-        gap: 2rem;
+        justify-content: center;
+        gap: 1rem;
     }
 
     .logoredes {
-        width: 80%;
+        width: 50%;
     }
 
 }
