Update TamPets Na Midia
- alteração de cor
- correções de estilo

--- a/styles/galeria.module.css
+++ b/styles/galeria.module.css
@@ -5,4 +5,9 @@
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.body-galeria {
+    background-color: rgb(255, 251, 229);
 }
