--- a/styles/namidia.module.css
+++ b/styles/namidia.module.css
@@ -1,22 +1,20 @@
-/* CONTEÚDO */
+
 .news-container {
   display: grid;
   gap: 14px;
   grid-template-columns: 1fr;
   justify-items: center;
   width: 100%;
-  max-width: 1100px; /* <-- ESSENCIAL */
-  margin: 40px auto; /* <-- centraliza e impede que expanda demais */
+  max-width: 1100px;
+  margin: 40px auto; 
 }
 
-/* TABLET — 2 cards por linha */
 @media (min-width: 600px) {
   .news-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-/* DESKTOP — 4 cards por linha */
 @media (min-width: 1024px) {
   .news-container {
     grid-template-columns: repeat(4, 1fr);
