--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background: whitesmoke;
+    background: white;
     height: 15vh;
     box-shadow: 0 0 0.2rem 0.4rem rgba(0, 0, 0, 0.08);
     color: #333;
