--- a/styles/copyright.module.css
+++ b/styles/copyright.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: whitesmoke;
+    background: white;
     border-top: solid 0.1rem #b5b5b5;
     padding: 1rem;
     color: #8c8c8c;
