--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -16,11 +16,10 @@
     padding: 3rem;
     gap: 2rem;
     width: 100%;
-    margin-top: 10rem;
-    background: linear-gradient(to right,
-            white, 60%,
-            #d7c216 30%);
-    border-radius: 5%;
+    height: 50vh;
+    background: linear-gradient(to top,
+            white,
+            #d7c216 );
 }
 
 /* TEXTO */
@@ -28,6 +27,7 @@
     flex: 1;
     text-align: center;
     padding: 3rem;
+    margin: 2rem;
 }
 
 .section span {
@@ -60,55 +60,11 @@
     flex: 1;
     display: flex;
     justify-content: center;
-    background-color: rgb(250, 249, 221);
-    border-radius: 20%;
+    height: 20vh;
     padding-top: 3rem;
 }
 
-.img {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
 
-.fadeWrapper {
-    position: relative;
-    width: 450px;
-    height: 600px;
-    overflow: hidden;
-}
-
-
-/* Todas imagens sobrepostas */
-.fadeImage {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: -30%;
-}
-
-.fadeImageEnd {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 8%;
-}
-
-/* Suaviza transição com gradiente vertical */
-.fadeImage img,
-.fadeImageEnd img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-/* Fadings verticais super suaves */
-.fadeImage,
-.fadeImageEnd {
-    mask-image: linear-gradient(to bottom,
-            rgba(0, 0, 0, 1) 50%,
-            rgba(0, 0, 0, 0) 90%);
-}
 
 /* PONTO DE COLETA */
 .pontocoleta {
@@ -116,16 +72,15 @@
     align-items: center;
     justify-content: space-between;
     padding: 3rem;
-    gap: 2rem;
+    gap: 30%;
     width: 100%;
-    margin-top: 10rem;
-    background: linear-gradient(to left,
-            white, 60%,
-            #5f81b7 30%);
-    border-radius: 5%;
+    height: 100%;
 }
 
+
+
         /* TEXTO */
+
 .box2 {
     border-radius: 50px;
     background: #cfe9ff;
@@ -133,15 +88,43 @@
     padding: 2rem;
 }
 
-        /* IMAGEM */
-
-.imagem2 {
+/* IMAGEM */
+/* .imagem2 {
+    width: 300px;
+    height: 300px;
     flex: 1;
     display: flex;
     justify-content: center;
-    background-color: ##e6f0ff;
     border-radius: 20%;
     padding-top: 3rem;
+} */
+
+      
+
+/* VOLUNTÁRIO */
+.voluntario {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem;
+    gap: 2rem;
+    width: 100%;
+    height: 50vh;
+    margin-top: 1rem;
+
+}
+
+/* RESUMO RELATORIO */
+.resumoRelatorio {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem;
+    gap: 2rem;
+    width: 100%;
+    height: 50vh;
+    margin-top: 1rem;
+    background-image: linear-gradient(to bottom, white,#9d43c2);
 }
 
 
@@ -175,4 +158,6 @@
     .imagem1 {
         display: none;
     }
+
+    /* PONTO COLETA */
 }
