--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -160,14 +160,14 @@
 /* VOLUNTÁRIO */
 .ajuda {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* garante centralização */
     width: 100%;
-    height: auto;
-    margin-top: 1rem;
-    gap: 5rem;
-    padding: 3rem;
+    padding: 2rem;
+    gap: 1rem;
+    /* diminui o espaço */
 }
 
 /* TEXTO */
@@ -179,6 +179,12 @@
 .cardsAjuda {
     display: flex;
     flex-direction: row;
+    gap: 2rem;
+    /* espaçamento entre os cards */
+    justify-content: center;
+    /* centraliza */
+    align-items: center;
+    width: 100%;
 }
 
 
@@ -205,7 +211,8 @@
     }
 
     /* COMO DOAR */
-    .doar {
+    .doar,
+    .pontocoleta {
         flex-direction: column;
         text-align: center;
         background-color: white;
@@ -227,10 +234,12 @@
         font-size: 1.2rem;
     }
 
-
     /* VOLUNTARIO */
     .cardsAjuda {
         flex-direction: column;
         width: 100%;
+        gap: 1rem;
     }
+
+
 }
