--- a/styles/swap-cards.module.css
+++ b/styles/swap-cards.module.css
@@ -1,54 +1,72 @@
-.cardArea {
+.document {
     width: 100%;
-    height: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.cardArea {
+    width: 350px;
+    height: 450px;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 1rem;
 }
 
 .card {
     position: relative;
-    width: 70%;
+    width: 320px;
+    height: 350px;
     padding: 2rem;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; /* ⬅ centraliza tudo horizontalmente */
+    align-items: center;
+    /* ⬅ centraliza tudo horizontalmente */
     gap: 1rem;
     transition: transform 0.3s ease-in-out;
 
     &:hover {
         transform: scale(1.2);
+        background-color: #f3d4c2;
     }
 
 }
 
 .cardBorder {
     position: absolute;
-    inset: 0;
-    z-index: 2;
+    z-index: 0;
+    /* inset: -10; */
 }
 
 
 .cardImage {
-    width: 40%; /* Aumentei um pouco, mas você ajusta */
+    width: 40%;
+    /* Aumentei um pouco, mas você ajusta */
     border-radius: 8px;
-    margin: 0 auto; /* ⬅ centraliza perfeitamente */
+    margin: 0 auto;
+    /* ⬅ centraliza perfeitamente */
     z-index: 3;
-    display: block; /* garante que o margin auto funcione */
+    display: block;
+    /* garante que o margin auto funcione */
 }
 
 .card h2 {
     font-size: 2.2rem;
     color: black;
     z-index: 3;
+    display: flex;
+    text-align: center;
+
 }
 
 .card figcaption {
     font-size: 1.2rem;
     z-index: 3;
+    text-align: center;
 }
 
 .button {
@@ -56,8 +74,8 @@
     padding: 10px 15px;
     border-radius: 20px;
     background: white;
-    color: #D65552;
-    border: 1px solid #D65552;
+    color: #F85818;
+    border: 1px solid #F85818;
     text-align: center;
     font-weight: 500;
     transition: 0.3s;
@@ -65,6 +83,17 @@
 }
 
 .button:hover {
-    background: #D65552;
+    background: #F85818;
     color: black;
+}
+
+@media (max-width: 768px) {
+    .card {
+
+
+        &:hover {
+            transform: none;
+            background-color: white;
+        }
+    }
 }
