--- a/styles/swap-cards.module.css
+++ b/styles/swap-cards.module.css
@@ -3,7 +3,7 @@
     height: auto;
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 3rem;
 }
 
 .cardArea {
@@ -19,7 +19,7 @@
     position: relative;
     width: 320px;
     height: 350px;
-    padding: 2rem;
+    padding: 3rem;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -71,7 +71,7 @@
 
 .button {
     z-index: 4;
-    padding: 10px 15px;
+    padding: 1rem;
     border-radius: 20px;
     background: white;
     color: #F85818;
@@ -80,6 +80,7 @@
     font-weight: 500;
     transition: 0.3s;
     text-decoration: none;
+    font-size: 1.2rem;
 }
 
 .button:hover {
