--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -193,7 +193,7 @@
     flex-direction: column;
     padding: 3rem;
     gap: 2rem;
-    width: 100%;
+    width: auto;
     background-image: linear-gradient(to left, white, #9d43c2);
 }
 
@@ -201,7 +201,6 @@
     width: 100%;
     text-align: center;
 }
-
 
 .animacao {
     display: flex;
