--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,10 @@ section {
 @media (max-width: 768px) {
 
   /* GERAL */
+  html, body {
+    overflow-x: hidden;
+  }
+
   section {
     margin: 0;
   }
