--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -218,8 +218,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 5px dashed #fff;
-    outline: 3px solid rgba(255, 255, 255, 0.7);
+    outline: 3px dashed rgba(255, 255, 255, 0.7);
     outline-offset: 4px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     padding: 3rem;
@@ -240,6 +239,26 @@
     font-weight: 700;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
+
+/* PARCEIROS */
+.parceiros {
+    width: 100%;
+    height: 20vh;
+}
+
+.texto3 {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+}
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 768px) {
