--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -18,6 +18,10 @@
     text-align: center;
     padding: 3rem;
     margin: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .texto p {
@@ -120,21 +124,23 @@
 .doar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 5rem;
     gap: 2rem;
     width: 100%;
     background: linear-gradient(to left,
             white,
-            #d7c216);
+            #ffedc2,
+            white);
 
 }
 
 .box1 {
     border-radius: 50px;
-    background: #ffedc2;
+    background: #d7c216;
     cursor: pointer;
     padding: 2rem;
+    width: 50%;
 }
 
 /* PONTO DE COLETA */
@@ -243,7 +249,8 @@
 /* PARCEIROS */
 .parceiros {
     width: 100%;
-    height: 20vh;
+    height: 25vh;
+    padding: 2rem;
 }
 
 .texto3 {
