--- a/styles/admin-home.module.css
+++ b/styles/admin-home.module.css
@@ -3,14 +3,19 @@
             #e1f1ff,
             #dcd7fc);
 
-    height: 100vh;
+    height: auto;
+    padding-bottom: 5rem;
+}
+
+.titulo img {
+    width: 200px;
 }
 
 .titulo {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5rem;
+    padding: 2rem 5rem;
     flex-direction: column;
     gap: 2rem;
 }
@@ -21,4 +26,47 @@
 
 .titulo p {
     font-size: 1.6rem;
+}
+
+.paginasAdm {
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    gap: 5rem;
+    justify-content: center;
+    align-content: center;
+    padding: 4rem 0;
+}
+
+.cards {
+    width: 200px;
+    height: 200px;
+    border-radius: 30px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    padding: 2rem;
+}
+
+.cards p {
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.link {
+    text-decoration: none;
+    color: inherit;
+}
+
+@media (max-width: 768px) {
+    .titulo {
+        text-align: center;
+    }
+
+    .paginasAdm {
+        grid-template-columns: repeat(1, 200px);
+    }
 }
