--- a/styles/adm-galeria.module.css
+++ b/styles/adm-galeria.module.css
@@ -32,6 +32,15 @@
   color: #555555;
 }
 
+.select,
+.input {
+  font-size: 1.3rem;
+}
+
+.btn {
+  font-size: 1.5rem;
+}
+
 /* Blocos de seleção e upload */
 .section-page>div:nth-child(n+2) {
   background-color: #fff;
@@ -49,7 +58,7 @@
 
 /* Textos dentro dos blocos */
 .section-page p {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   /* maior que antes */
   color: #2e2e2e;
   margin: 0;
